--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "build": "gulp"
   },
   "dependencies": {
-    "axios": "0.17.1",
+    "axios": "^0.21.0",
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
+    "echarts": "^4.9.0",
     "element-ui": "2.8.2",
     "gulp-concat": "2.6.1",
     "gulp-load-plugins": "1.5.0",
     "gulp-replace": "0.6.1",
     "gulp-shell": "0.6.5",
-    "lodash": "4.17.5",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
-    "npm": "^6.9.0",
+    "npm": "^6.14.8",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
