--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "npm": "^6.14.8",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
-    "vue": "2.5.16",
+    "vue": "^2.5.16",
+    "vue-axios": "^3.2.0",
     "vue-cookie": "1.1.4",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
